--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>Docume</title>
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias libero natus sunt cum numquam reprehenderit 
-        nesciunt molestiae omnis blanditiis dolore sit inventore voluptatibus, laborum placeat, ullam facilis dicta impedit itaque.</p>
+    <h1>Notification Page</h1>
+    <script>
+        
+        function showNotification() {
+            document.createElement("p");
+            document.body.innerHTML = `
+                <p>.</p>
+            `;
+        }
+
+    
+        showNotification();
+    </script>
 </body>
 </html>
