--- a/todo.html
+++ b/todo.html
@@ -17,7 +17,7 @@
                     <h1> Send A Notification</h1>
             <input type="text"placeholder="Enter your message" id="input">
             <button id="button" onclick="sendMessage()">SEND</button>
-            <button id="status">status</button>
+            <button id="status" onclick="">status</button>
         </div>
         
         <div>
